# tmcp-credentials

./: .gitignore  README.md  pyproject.toml  run_handler_example.py  server.py
credential_checking_server/: server.py
examples/: generate_test_credential.py  run_handler_example.py
src/credential_checking_server/: __main__.py  server.py
src/credential_handler/: __init__.py  base_handler.py  handler.py  sd_jwt_handler.py
